FIX visibility in dark mode

--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ body {
   display: flex;
   width: 100%;
   height: 100%;
-  background: var(--color-secondary);
   flex-direction: column;
+  background: #fff;
 
 }
 
